# Ai-Humanoid-Robotics-books

./: .gitignore  CLAUDE.md  GEMINI.md  docusaurus.config.ts  feature_description_module2.md  package-lock.json  package.json  sidebars.ts  tsconfig.json
backend/: .gitignore  AGENT_INTEGRATION_SUMMARY.md  README.md  check_qdrant_stats.py  check_qdrant_stats.sh  main.py  pyproject.toml  test_agent_integration.py  test_api_integration.py  test_comprehensive_rag.py  test_direct_search.py  test_http_endpoint.py  test_rag_pipeline.py  test_raw_qdrant.py  test_simple_query.py
backend/check_qdrant_stats/: README.md  requirements.txt
backend/src/api/: main.py
backend/src/api/middleware/: session.py
backend/src/api/routes/: health.py  query.py  session.py
backend/src/cli/: indexer_cli.py
backend/src/config/: settings.py
backend/src/models/: agent.py  chunk.py  embedding.py  payload.py  query.py  session.py  vector_point.py
backend/src/services/: agent_service.py  chat_session.py  chunker.py  content_ingestor.py  context_assembler.py  context_filter.py  context_formatter.py  embedding_service.py  error_handler.py  query_processor.py  response_formatter.py  vector_storage.py
backend/src/utils/: context_utils.py  file_utils.py  markdown_parser.py  token_counter.py
backend/tests/: conftest.py
backend/tests/integration/: test_chunking.py  test_indexing_pipeline.py  test_metadata_storage.py  test_reindexing.py  test_traceability.py
backend/tests/unit/: test_chunker.py  test_content_ingestor.py  test_embedding_service.py  test_vector_storage.py
docs/: glossary.md  (+3 more)
(+318 files in other folders)
